--- a/drawingApp/client/drawingApp.css
+++ b/drawingApp/client/drawingApp.css
@@ -22,6 +22,10 @@
   margin-top: 85px;
 }
 
+.marginTopII {
+  margin-top: 65px;
+}
+
 .marginBtmI {
   margin-bottom: 120px;
 }
@@ -118,7 +122,7 @@ width: 40px;
   width: inherit;
   height:inherit;
   border-style: solid;
-  border-width: 1px;
+  border-width: 5px;
   border-color: black;
 }
 
